build script and source classes